benefits/static/css/styles.css
/* ... */
/* Sets the text `Login.gov` as transparent */
/* With an Login.gov logo image over it */
/* So screenreaders can read out `Login.gov` */
#login .fallback-text {
  background: url("/static/img/login-gov-logo-rev.svg") no-repeat;
  background-size: contain;
  display: inline-block;
  position: relative;
  width: 132px;
  height: 18px;
  margin-left: 5px;
  padding-top: 1px;
  vertical-align: baseline;
  color: transparent;
  font-size: 16px;
  font-weight: var(--bold-font-weight);
  line-height: 1;
}

/* Custom button: Sign Out */

.signout-row {
  position: absolute;
  width: 100%;
  z-index: 100;
}

.signout-row .container {
  display: flex;
  justify-content: flex-end;
}

.signout-row .container .signout-link {
  font-size: 12px;
  text-decoration: underline;
  color: var(--primary-color);
  letter-spacing: 0.05rem;
  padding-top: 18px;
  display: block;
}

/* Custom button: Previous Page */

.previous-page-row {
  margin-top: 19px;
}

#previous-page-button {
  border-color: var(--text-primary-color);
  color: var(--text-primary-color);
  font-weight: 500;
  font-size: calc(14rem / 16); /* 14px */
  line-height: calc(17.5rem / 16); /* 17.5px */
  letter-spacing: 0.05rem;
}

@media (min-width: 992px) {
  #previous-page-button {
    border: none;
  }
}

#previous-page-button::before {
  background: url("/static/img/left-arrow.svg") no-repeat;
  content: "";
  display: inline-block;
  height: calc(18rem / 16);
  line-height: calc(18rem / 16);
  position: relative;
  vertical-align: middle;
  width: calc(18rem / 16);
}

/* Forms: Inputs */

.form-control {
  border-radius: 0.25rem;
  border-color: var(--primary-color);
  border-width: 2px;
  color: var(--text-primary-color);
}

.form-control-lg {
  border-radius: 0.3rem;
}

.required-label {
  color: var(--text-primary-color);
}

.form-group {
  margin-bottom: 2.375rem;
}

.form-group:nth-last-of-type(2) {
  margin-bottom: 3.375rem;
}

/* Forms: Radio Buttons */

.radio-label {
  cursor: pointer;
  display: inline;
  margin-left: 15px;
}

.radio-input {
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;

  border-radius: 50%;
  width: 25px;
  height: 25px;

  border: 3px solid var(--radio-input-color);
  margin-right: 5px;
  margin-top: 20px;

  position: relative;
  top: 7px;
}

.radio-input:checked {
  background-color: var(--radio-input-color);
  box-shadow: inset 0 0 0 2px var(--bs-white);
}

.radio-label-description {
  margin-left: 2rem;
}

/* Media List */

:root {
  --media-item-icon-size: 64px;
  --media-item-gap: 24px;
  --media-item-icon-margin: 24px;
  --media-title-margin-top: 24px;
}

@media (min-width: 992px) {
  :root {
    --media-item-icon-size: 90px;
    --media-item-gap: 62px;
    --media-item-icon-margin: 32px;
    --media-title-margin-top: 64px;
  }
}

.media-title {
  margin-top: var(--media-title-margin-top);
  margin-bottom: 24px;
}

.media-list {
  gap: var(--media-item-gap);
  margin-bottom: 64px;
}

.media-list .media .media-line .icon {
  width: var(--media-item-icon-size);
  height: var(--media-item-icon-size);
  margin-right: var(--media-item-icon-margin);
}

.media-list .media .media-body--details,
.media-list .media .media-body--items li:first-child {
  padding-top: 5px;
}

.media-list .media .media-body--items li {
  list-style-type: disc;
}

/* Eligibility Start */

.eligibility-start .buttons .btn {
  width: 100%;
}

.eligibility-start .main-container .buttons label {
  margin: 0 0.8rem 0 0;
  line-height: 1;
}

/* Enrollment Success */

.enrollment-success #login {
  padding: 0 0.5rem 0.3rem 0.6rem;
  display: inline-block;
  margin: 0;
  width: inherit;
  border-radius: 0;
}

.enrollment-success #login .fallback-text {
  padding-top: 14px;
  margin: 8px auto 0 auto;
  display: block;
  width: 7rem;
}

/* 404 Page */

.container.content h1.icon-title {
  padding-bottom: 1.5rem;
}

.container.content h1.icon-title span.icon {
  display: block;
  padding-bottom: 3rem;
}

.container.content h1.icon-title img.icon {
  width: 150px;
  height: 150px;
}

/* Help */

.container.content.help {
  margin: 4rem auto 2rem auto;
}

.container.content.help h1 {
  margin-bottom: 4rem;
}

.container.content.help h2 {
  margin-bottom: 3rem;
  margin-top: 3rem;
}

.container.content.help p {
  margin-bottom: 2rem;
}

.container.content.help .buttons-agencies,
.with-agency-links .buttons-agencies {
  font-size: 18px;
  letter-spacing: 0.05rem;
  margin-bottom: 3rem;
}

.container.content.help .buttons-agencies a,
.with-agency-links .container.content .buttons-agencies a {
  display: table;
  margin-bottom: 0.2rem;
}

.container.content.help .buttons-agencies label,
.with-agency-links .container.content .buttons-agencies label {
  display: block;
  margin-top: 2rem;
  font-size: 18px;
}

.container.content.help .button-back {
  margin-top: 5rem;
  margin-bottom: 5rem;
}

.container.content h1 ~ p:nth-last-of-type(1) {
  margin-bottom: 2rem;
}

.container.content .btn-lg,
.eligibility-start .btn-link {
  font-weight: 500;
  margin-bottom: 1rem;
  padding: 0.8125rem;
  /* btn-lg height is 60px */
  width: 100%;
}

.container.content .btn-link,
.eligibility-start .btn-link {
  text-decoration: underline;
}

/* media queries */

@media (max-width: 320px) {
  #login {
    padding: 1rem 1.25rem;
  }
}

@media (max-width: 767px) {
  .radio-label {
    display: inline;
    margin-left: 5px;
  }
}
/* ... */

